--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,13 @@ body {
         width: 80%;
     }
 
+    .footer {
+        position: absolute;
+        display: block;
+        bottom: 0;
+        width: 100%;
+    }
+
     #footer-socials {
         margin: 0.5rem auto;
         padding: auto 0.5rem;
